--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mynotes",
-  "proxy": "http://127.0.0.1:8000", 
+  "proxy": "http://127.0.0.1:8000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,10 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "engines": {
+    "node": "16.16.0",
+    "npm": "8.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
