--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ django-heroku==0.3.1
 djangorestframework==3.13.1
 gunicorn==20.1.0
 whitenoise==6.2.0
-django-crispy-forms=1.14.0
+django-crispy-forms==1.14.0
